Fix up some colours, spacing and templating the footer

--- a/assets/styles/modules/_color.scss
+++ b/assets/styles/modules/_color.scss
@@ -1,5 +1,5 @@
 $black: #222222;
 $grey: #757575;
 $white: #ffffff;
-$blue: #7c90db; //cornflower blue
+$blue: #1e88e5 ; //cornflower blue
 $light-grey: #f1f1f1;
