--- a/assets/styles/modules/_typography.scss
+++ b/assets/styles/modules/_typography.scss
@@ -61,7 +61,7 @@ h4,
 h5,
 h6 {
      margin: 0 0 20px 0;
-     color: $black;
+     color: $grey;
 }
 
 // Variables
