--- a/assets/styles/partials/_base.scss
+++ b/assets/styles/partials/_base.scss
@@ -1,6 +1,11 @@
 * {
   box-sizing: border-box;
   font-family: $site-font;
+  color: $black;
+}
+
+body {
+  margin: 0;
 }
 
 .light-grey {
